--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,46 @@
 html,
 body{
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
     }
 .navbarfont{
   color: white;
 }
+th, td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd
+}
+tr:hover {background-color: #f5f5f5;}
+th {
+  background-color: grey;
+  color: white;
+}
+footer{
+    background-color: black;
+    color: white;
+    height:100px;
+    width: 100%;
+    background-image: none;
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+    left: 0pt;
+}
+  .navbar-custom{
+    background-color: black;
+    color: white;
+}
+.navbar-custome:hover{color: lightblue}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35%;
+}
+.imageclass{
+  width: 20%;
+}
+.email:hover{color: white}
