--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,3 +44,11 @@ footer{
   width: 20%;
 }
 .email:hover{color: white}
+#buttoncolor{
+  background-color: black;
+  color: white;
+}
+#buttoncolor:hover{
+  background-color: blue;
+  color: white;
+}
